--- a/web/add_news.html
+++ b/web/add_news.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Administrador APPrende+</title>
+  <title>Agregar Noticia</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -15,24 +15,9 @@
 </head>
 <body>
   <header>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBFr1CNyxdZF3c5Sk91EST5Q-zURZtMMsHow&s" alt="Logo APPrende+" class="logo-institucion">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBFr1CNyxdZF3c5Sk91EST5Q-zURZtMMsHow&s" alt="Logo Institución" class="logo-institucion">
   </header>
-  <div id="login-container" class="container">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBFr1CNyxdZF3c5Sk91EST5Q-zURZtMMsHow&s" alt="Logo APPrende+" class="logo-apprende">
-    <h1>APPrende+</h1>
-    <h2>Página del Administrador</h2>
-    <input type="email" id="email" placeholder="Correo Electrónico">
-    <input type="password" id="password" placeholder="Contraseña">
-    <button id="login-button">Iniciar Sesión</button>
-    <p id="login-error" class="error"></p>
-  </div>
-  <div id="add-news-container" class="container hidden">
-    <nav>
-      <ul class="nav-bar">
-        <li><a href="index.html">Noticias</a></li>
-        <li><a href="reportes.html">Reportes</a></li>
-      </ul>
-    </nav>
+  <div id="add-news-container" class="container">
     <h1>Agregar Noticia</h1>
     <form id="add-news-form">
       <div class="form-group">
